--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 Registrate is primarily a wordpress plugin designed to allow users to register for specific events and keep track of registrations.
 
-Author:		Johannes Müller <straight-shoota@straight-shoota.de>
+Author:		Johannes MÃ¼ller <straight-shoota@straight-shoota.de>
 Version:	0.1-alpha
 Date:		2010-11-10
 
